<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coffeepot"
    tools:context=".app.home.HomeFragment">

    <TextView
        android:id="@+id/helloMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/hellouser"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startQuestionnaireButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif"
        android:padding="7dp"
        android:text="@string/startquestionnaire"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloMessage" />

    <Button
        android:id="@+id/viewLeaderboardButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif"
        android:padding="7dp"
        android:text="@string/viewleaderboard"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startQuestionnaireButton" />

    <Button
        android:id="@+id/howToPlayButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif"
        android:padding="7dp"
        android:text="@string/howtoplay"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLeaderboardButton" />

    <Button
        android:id="@+id/logoutButtonHome"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="@color/brown"
        android:fontFamily="sans-serif"
        android:padding="7dp"
        android:text="@string/logout"
        android:textColor="@color/pewter"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>